[tool.poetry]
name = "traefik-py"
version = "0.1.0"
description = ""
authors = ["agnibha-chatterjee <agni.bhaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
docker = "^7.1.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
